  o Also can write VBR Tag ("XING Header") in MP3 files. (Jim Hark /
    Doug Cook)
  o Increase percision of MP3 encoders to use 24-bits instead of 
    16-bits. (Doug Cook)
  o Fix failed writing 24-bit PAF files (and possibly other libsndfile
    based formats).  (cbagwell)
  o Allow libsndfile to be dlopen()'ed at runtime if --enable-dl-sndfile
    is used. (Doug Cook)
  o amrnb and amrwb formats can optionally use opencore-amr libraries.
    (cbagwell)

Audio device drivers:

  o Add native windows audio driver.  (Pavel Karneliuk, Doug Cook)
  o Add 32-bit support to ALSA driver.  (Pavel Hofman)

Effects:

  o Fix [2254919] silence doesn't trim digital silence correctly.  (robs)
  o Fix [2859842] stats effect crashes on 64-bit arch.  (Ulrich Klauer)

Other new features:

  o Added libSoX example #4: concatenating audio files.  (robs)
  o Show soxi version & usage information when no args given.  (robs)

Other bug fixes:

  o Fix build so that grouped files (e.g. play -r 6k "*.vox" plays all
    at 6k) works.  (robs)
  o Fix build to support auto file type detection with pipes on FreeBSD
    and elsewhere.  (Dan Nelson)
  o Fix simultaneous play & rec not working.  (robs)
  o Fix multi-threading problems on multi-core Windows OS; also, change
    default to single-threaded.
  o Fix mistaken file size with pipe input on Windows.  (Doug Cook)
  o Fix missing documentation for -R (repeatable), and pulseaudio driver.
  o Fix memory leak of format private data.  (Slawomir Testowy)

Internal improvements:

  o Move bit-rot detection support files to sub-directory (could
    previously cause build problems).  (robs)
  o [2859244] Fixes to improve compatibility with MSVC.  (Doug Cook)
  o Added utilities to help any format handler dlopen() external
    libraries at run time instead of link time. (Doug Cook)


sox-14.3.0	2009-06-14
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]